--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "connect-mongo": "^4.6.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.5.1",
     "express-session": "^1.17.2",
+    "express-validator": "^6.13.0",
     "luxon": "^2.0.2",
     "method-override": "^3.0.0",
     "mongodb": "^4.1.3",
